# openapi-audit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
openapi_audit/: audit.py  summarize.py
tests/: fake-pyproject.toml  test_1.py
tests/examples/: README.md  the-worst-api.json
