[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openapi-audit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
dynamic = ["version"]

[project.scripts]
openapi-audit = "openapi_audit.audit:main"
openapi-summarize = "openapi_audit.summarize:main"

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "ty>=0.0.29",
]

[tool.hatch.version]
path = "openapi_audit/__init__.py"

[tool.ruff]
preview = true
line-length = 120

[tool.ruff.lint]
extend-select = [
    "B",
    "C",
    "COM",
    "E",
    "I",
    "PGH",
    "PIE",
    "PL",
    "RET",
    "RUF005",
    "RUF022",
    "S",
    "SIM",
    "TID251",
    "TRY",
    "UP",
    "W",
]
ignore = [
    "E501",
    "PLW1514",
    "TRY003",
]

[tool.ruff.lint.mccabe]
max-complexity = 10
